--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "bestmomo/laravel-email-confirmation": "^1.1",
         "fideloper/proxy": "^4.0",
         "intervention/image": "^2.4",
+        "jrm2k6/cloudder": "^0.5.0",
         "laravel/framework": "5.6.*",
         "laravel/socialite": "^3.0",
         "laravel/tinker": "^1.0",
