--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^7.1.3",
         "bestmomo/laravel-email-confirmation": "^1.1",
         "fideloper/proxy": "^4.0",
+        "guzzlehttp/guzzle": "^6.3",
         "intervention/image": "^2.4",
         "jrm2k6/cloudder": "^0.5.0",
         "laravel/framework": "5.6.*",
