--- a/public/.htaccess
+++ b/public/.htaccess
@@ -39,7 +39,17 @@
     mod_gzip_item_exclude rspheader ^Content-Encoding:.*gzip.*
 </ifModule>
 
-<FilesMatch "\.(js|css|jpg|png|gif)$">
+AddOutputFilterByType DEFLATE text/plain
+AddOutputFilterByType DEFLATE text/html
+AddOutputFilterByType DEFLATE text/xml
+AddOutputFilterByType DEFLATE text/css
+AddOutputFilterByType DEFLATE application/xml
+AddOutputFilterByType DEFLATE application/xhtml+xml
+AddOutputFilterByType DEFLATE application/rss+xml
+AddOutputFilterByType DEFLATE application/javascript
+AddOutputFilterByType DEFLATE application/x-javascript
+
+<FilesMatch "\.(js|css|jpg|png|gif|ico)$">
   ExpiresActive On
   ExpiresDefault "access plus 1 weeks"
 </FilesMatch>
