--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "aws/aws-sdk-php": "~3.0",
         "bestmomo/laravel-email-confirmation": "^1.1",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^6.3",
@@ -15,7 +16,7 @@
         "laravel/socialite": "^3.0",
         "laravel/tinker": "^1.0",
         "league/flysystem-aws-s3-v3": "^1.0",
-        "aws/aws-sdk-php": "~3.0"
+        "pimax/fb-messenger-php": "dev-master"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.1",
